@@ -6,6 +6,10 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-02-19
 
+  - Added prototype for converting Google Docs doc from docx and rst
+    conversions, using the docx blocks to insert indented versions in the rst
+    file.
+
   - Removed deprecated beancount.ops.prices module.
 
 
